--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,234 @@
-.site{
-  background-color: rgb(0,0, 0);
+.site {
+  background-color: rgb(34, 34, 34);
 }
-.header{
+
+.header {
   position: sticky;
   top: 0;
   z-index: 1;
+}
+
+.hello {
+  color: rgb(240, 57, 240);
+}
+
+.git {
+  border-radius: 50px;
+  transition: transform .5s ease, box-shadow 0.3s ease;
+
+}
+
+.git:hover {
+  transform: scale(1.3);
+
+}
+
+.text {
+  width: 550px;
+}
+.img{
+  width: 40%;
+  height: 30%;
+}
+.script {
+  padding: 20px;
+  background-color: transparent;
+  cursor: pointer;
+  color: white;
+  transition: transform .5s ease, box-shadow 0.3s ease;
+}
+
+.script img {
+  width: 30px;
+}
+
+.script:hover {
+  transform: scale(1.3);
+
+}
+
+.date {
+  color: rgb(154, 92, 225);
+}
+
+
+.card-wrapper {
+  perspective: 1000px;
+}
+
+.card {
+  position: relative;
+  width: 100%;
+  height: auto;
+  transition: transform 1.0s;
+  transform-style: preserve-3d;
+  cursor: pointer;
+}
+
+.card:hover {
+  transform: rotateY(180deg);
+}
+
+.card-front,
+.card-back {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  backface-visibility: hidden;
+}
+
+.card-back {
+  transform: rotateY(180deg);
+}
+
+.button {
+  width: 35.3rem;
+  height: 40px;
+  font-size: 15px;
+  margin-left: -8.7rem;
+  color: white;
+  border: none;
+  border-radius: 5px;
+  background-color: rgb(240, 57, 240);
+  box-shadow: 2px 5px 10px 0px rgba(235, 238, 239, 0.1);
+}
+
+.button:hover {
+  background-color: rgba(195, 63, 252, 0.6);
+  transition: all 0.5s ease-in-out;
+}
+
+
+.skill {
+  margin-top: 12rem;
+}
+
+
+.input {
+  margin-bottom: 30px;
+  margin-left: 4rem;
+}
+
+.form-control{
+  height: 60px;
+}
+
+.textarea {
+  height: 150px;
+}
+.porfolio{
+  font-size: 20px;
+  margin-left: 2em;
+}
+
+.formContent{
+  display: flex;
+  /* width: 50%; */
+}
+.flex {
+  display: flex;
+}
+.social{
+  padding: 9rem 0 10rem 10rem;
+}
+
+.small{
+  display: flex;
+}
+
+.formContent{
+  margin-left: 3rem;
+}
+
+@media screen and  (max-width: 768px) {
+
+.secondService{
+  margin-top: 300px;
+  
+  }
+  .thirdService{
+    margin-top: 650px;
+    
+    }
+  .firstContent{
+    width: 350px;
+    margin-left: -55px;
+  }
+  .hello, .job{
+    font-size: 30px;
+  }
+  .homeText{
+    font-size: 25px;
+  }
+  .skill{
+    margin-top: 350px;
+  }
+  .skills{
+    margin-top: 110rem;
+    font-size: 40px ;
+    
+  }
+  .img{
+    width: 80%;
+    margin-top: 3rem;
+  }
+  .row {
+    display: block;
+    margin-bottom: 20px;
+  }
+  .small{
+    display: block;
+  }
+  .text {
+    width: 100%;
+  }
+  .big{
+    /* margin-top: 28rem; */
+    font-size: 45px;
+  }
+.flex{
+display: block;
+}
+.contact{
+  margin-top: 75rem;
+  font-size: 45px;
+}
+.input{
+  position: relative;
+  right: 4rem;
+  top: 40px;
+}
+  .button{
+    width: 250px;
+    margin-left: -60px;
+  }
+  .form-control{
+    height: 80px;
+    margin-right: 40px;
+  }
+ .formContent{
+  display: block;
+ }
+ .social{
+  padding: 0;
+}
+
+.textarea {
+  width: 10px;
+  margin-top: 25px;
+  margin-right: 30px;
+  height: 200px;
+}
+}
+
+@media screen and  (max-width: 1024px){
+   /* .social{
+    padding: 10rem 1rem;
+  } */
+  /*.big {
+    margin-top: -200px;
+  }
+  .contact{
+    margin-top: -400px;
+  } */
 }
